[package]
name = "drivechain-cpp"
version = "0.1.0"
edition = "2021"

[features]
refund_amount_check = ["drivechain/refund_amount_check"]

[dependencies]
bitcoin = "0.29.1"
cxx = "1.0"
drivechain = { git = "https://github.com/nchashch/drivechain", rev = "db1c2e39d550ed6a6256f84e82899c3845d30ef0" }
thiserror = "1.0.31"
hex = "0.4.3"
miette = { version = "5.10.0", features = ["fancy"] }
log = "0.4"
simplelog = "0.11"

[build-dependencies]
cxx-build = "1.0"
